[package]
name = "lcd_drivers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = {version= "0.8.1",features = ["fixed"] }
embedded-graphics-core = { version = "0.4.0" }
embedded-hal ={ version = "0.2.7",features = ["unproven"]} 