[package]
name = "lcd_drivers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = {version= "0.8",features = ["fixed"] }
embedded-graphics-core = { version = "0.4" }
embedded-hal ={ version = "0.2.7"}
embedded-hal-async = { version = "1.0.0", optional = true }

[features]
async=["embedded-hal-async"]
uc1638=[]
st7571=[]