[package]
name = "lcd-drivers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = {version= "0.8",features = ["fixed"] }
embedded-graphics-core = { version = "0.4" }
embedded-hal ={ package = "embedded-hal", version = "0.2.7",optional = true}
embedded-hal-v2 ={ package = "embedded-hal",  version = "1.0.0",optional = true}
embedded-hal-async = { version = "1.0.0", optional = true }


[features]
default=["async","uc1638"]
async=["embedded-hal-async","embedded-hal-v2"]
blocking=["embedded-hal"]
uc1638=[]
st7571=[]
sharp1in26=["blocking"]